Updating Repast reference...

--- a/docs/asciidoc-8.6.9/stylesheets/toc2.css
+++ b/docs/asciidoc-8.6.9/stylesheets/toc2.css
@@ -1,7 +1,8 @@
 @media screen {
   body {
     max-width: 50em; /* approximately 80 characters wide */
-    margin-left: 16em;
+/*    margin-left: 16em; */
+    margin-left: 23em;
   }
 
   #toc {
@@ -9,7 +10,8 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 13em;
+ /*   width: 13em; */
+    width: 20em;
     padding: 0.5em;
     padding-bottom: 1.5em;
     margin: 0;
@@ -31,4 +33,10 @@
   #toctitle {
     margin-top: 0.5em;
   }
+
 }
+
+#toc a:link {text-decoration: none; }
+#toc a:hover { text-decoration: underline; }
+
+
